[33] - simplify withdrawals for BTC and XRP - use signed raw transaction and broadcast method from Tatum Core API
